--- a/1. Série 1/Exercice 8/index.html
+++ b/1. Série 1/Exercice 8/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <form>
-        <label for="pointure">Pointure : </label><input type="text" id="pointure" name="pointure"/><br/>
-        <label for="annee">Année de naissance : </label><input type="text" id="annee" name="annee"/><br/>
+        <label for="age">Votre âge : </label><input type="text" id="age" name="age"/><br/>
         <button  id="valider" name ="valider" onclick="blbl();">Valider</button>
     </form>
 <script src="assets/js/index.js"></script>
