Cookie cliker finish

--- a/8. En selle/5. Cookie clicker/index.html
+++ b/8. En selle/5. Cookie clicker/index.html
@@ -8,12 +8,18 @@
     <title>Cookie cliker</title>
 </head>
 <body>
-    <div id="main">
+    <div class="cookie">
         <button id="clicker">Cookie</button>
     </div>
 
-    <div id="affichage">
+    <div class="cookie" id="nbCookie">
         0
+    </div>
+
+    <div class="cookie">
+        <button id="multiplier" disabled>Multiplicateur x2 - Prix 50</button>
+        <button id="autoclic" disabled>Autoclic 1/s - Prix 500</button>
+        <button id="bonus" disabled>Clic*2 pendant 30s - Prix 5000</button>
     </div>
 
     <script src="assets/js/index.js"></script>
