JUSTINE A DIT MET DONE

--- a/8. En selle/5. Cookie clicker/index.html
+++ b/8. En selle/5. Cookie clicker/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>Cookie cliker</title>
 </head>
 <body>
+    <h1 class="title">Cookie Clicker</h1>
+
     <div class="cookie">
-        <button id="clicker">Cookie</button>
+        <button id="clicker"><i class="fas fa-cookie-bite"></i></button>
     </div>
 
     <div class="cookie" id="nbCookie">
@@ -17,9 +21,9 @@
     </div>
 
     <div class="cookie">
-        <button id="multiplier" disabled>Multiplicateur x2 - Prix 50</button>
-        <button id="autoclic" disabled>Autoclic 1/s - Prix 500</button>
-        <button id="bonus" disabled>Clic*2 pendant 30s - Prix 5000</button>
+        <button class="btn" id="multiplier" disabled>Multiplicateur x2 - Prix 50</button>
+        <button class="btn" id="autoclic" disabled>Autoclic 1/s - Prix 500</button>
+        <button class="btn" id="bonus" disabled>Clic*2 pendant 30s - Prix 5000</button>
     </div>
 
     <script src="assets/js/index.js"></script>
